--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -48,8 +48,8 @@ jobs:
       - name: Deploy to IONOS via FTP
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
-          ftp-server: ftps://${{ secrets.FTP_SERVER }}/
-          ftp-username: ${{ secrets.FTP_USERNAME }}
-          ftp-password: ${{ secrets.FTP_PASSWORD }}
+          server: ftps://${{ secrets.FTP_SERVER }}/
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./out/
           git-ftp-args: --insecure # Entfernen Sie dieses Argument, wenn Ihr Server FTP über SSL/TLS unterstützt
