--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -49,6 +49,7 @@ jobs:
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
           server: sftps://${{ secrets.FTP_SERVER }}/
+          port: ${{ secrets.FTP_PORT }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./out/
