--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -36,20 +36,20 @@ jobs:
           name: nextjs-site
           path: ./out
 
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v2
-        with:
-          name: nextjs-site
-      
-      - name: Deploy to IONOS via SFTP
-        uses: SamKirkland/FTP-Deploy-Action@4.1.0
-        with:
-          server: sftps://${{ secrets.FTP_SERVER }}/
-          port: ${{ secrets.FTP_PORT }}
-          username: ${{ secrets.FTP_USERNAME }}
-          password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./out/
+deploy:
+  runs-on: ubuntu-latest
+  needs: build
+  steps:
+    - name: Download artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: nextjs-site
+    
+    - name: Deploy to IONOS via SFTP
+      uses: SamKirkland/FTP-Deploy-Action@4.1.0
+      with:
+        server: sftp://access794949688.webspace-data.io
+        port: 22
+        username: u98282221
+        password: IUbf29guufU98&/
+        local-dir: ./out/
