--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -29,9 +29,12 @@ jobs:
       
       - name: Static HTML export with Next.js
         run: npm run export
-
-      - name: List contents of dist directory
-        run: ls -l ./dist/
+      
+      - name: Upload artifact for deployment
+        uses: actions/upload-artifact@v2
+        with:
+          name: nextjs-site
+          path: ./out
 
   deploy:
     runs-on: ubuntu-latest
@@ -49,4 +52,4 @@ jobs:
           port: 22
           username: u98282221
           password: IUbf29guufU98&/
-          local-dir: ./dist/
+          local-dir: ./out
