--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -48,8 +48,8 @@ jobs:
       - name: Deploy to IONOS via SFTP
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
-          server: sftp://access794949688.webspace-data.io
+          server: access794949688.webspace-data.io
           port: 22
           username: u98282221
           password: IUbf29guufU98&/
-          local-dir: ./
+          local-dir: ./out
