--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -1,12 +1,44 @@
+name: Deploy Next.js site to IONOS
+
 on:
   push:
     branches: ["main"]
+  workflow_dispatch:
 
-name: Deploy Next.js site to IONOS
+permissions:
+  contents: read
 
 jobs:
-  web-deploy:
+  build:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Build with Next.js
+        run: npm run build
+      
+      - name: Static HTML export with Next.js
+        run: npm run export
+      
+      - name: Upload artifact for deployment
+        uses: actions/upload-artifact@v2
+        with:
+          name: nextjs-site
+          path: ./out
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Download artifact
         uses: actions/download-artifact@v2
