--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -45,12 +45,11 @@ jobs:
         with:
           name: nextjs-site
     
-      - name: Deploy to IONOS via SFTP using SCP
-        uses: appleboy/scp-action@master
+      - name: Deploy to IONOS via SFTP
+        uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
-          host: access794949688.webspace-data.io
-          username: u98282221
+          server: access794949688.webspace-data.io
           port: 22
-          source: "./out/*"
-          target: "/out"
-          password: IUbf29guufU98&/  # Passwort direkt angegeben (Nicht empfohlen)
+          username: u98282221
+          password: IUbf29guufU98&/
+          local-dir: ./.next/
