--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -27,29 +27,29 @@ jobs:
       - name: Build with Next.js
         run: npm run build
       
-      - name: Static HTML export with Next.js
-        run: npm run export
+      # Entfernen des Static HTML export Schritts, da wir SSR verwenden
       
-      - name: Upload artifact for deployment
+      - name: Upload build artifact for deployment
         uses: actions/upload-artifact@v2
         with:
-          name: nextjs-site
+          name: nextjs-build
           path: ./.next
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Download artifact
+      - name: Download build artifact
         uses: actions/download-artifact@v2
         with:
-          name: nextjs-site
+          name: nextjs-build
     
-      - name: Deploy to IONOS via SFTP
-        uses: SamKirkland/FTP-Deploy-Action@4.1.0
+      - name: Deploy to IONOS via SFTP using SCP
+        uses: appleboy/scp-action@master
         with:
-          server: access794949688.webspace-data.io
-          port: 22
+          host: access794949688.webspace-data.io
           username: u98282221
-          password: IUbf29guufU98&/
-          local-dir: ./.next/
+          port: 22
+          source: "./.next/*"
+          target: "/path/to/your/server/directory/.next"
+          password: IUbf29guufU98&/  # Passwort direkt angegeben (Nicht empfohlen)
