--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -50,6 +50,6 @@ jobs:
           host: access794949688.webspace-data.io
           username: u98282221
           port: 22
-          source: "./.next/*"
+          source: "./*"
           target: "/out"
           password: IUbf29guufU98&/  # Passwort direkt angegeben (Nicht empfohlen)
