--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -44,9 +44,10 @@ jobs:
       - name: Deploy to IONOS via SFTP using SCP
         uses: SamKirkland/FTP-Deploy-Action@4.1.0
         with:
-          host: access794949688.webspace-data.io
-          username: u98282221
-          port: 22
-          source: "./out/*"
-          target: "/out"
-          password: IUbf29guufU98&/  # Passwort direkt angegeben (Nicht empfohlen)
+        server: access794949688.webspace-data.io
+        username: u98282221
+        password: IUbf29guufU98&/
+        port: 22
+        protocol: sftp
+        local-dir: "./out/"
+        server-dir: "/out"
